@@ -10,8 +10,8 @@ This means that what you build is primarily an artifact repository of OSGi bundl
 within smart home products. Besides this repository, a tool called "Designer" is available. The
 Designer can be used for editing configuration files with full IDE support.
 
-1. Prerequisites
-================
+1\. Prerequisites
+=================
 
 The build infrastructure is based on Maven in order to make it
 as easy as possible to get up to speed. If you know Maven already then
@@ -23,28 +23,28 @@ What you need before you start:
 
 Make sure that the "mvn" command is available on your path
 
-
-2. Checkout
-===========
+2\. Checkout
+============
 
 Checkout the source code from GitHub, e.g. by running
 
 git clone https://github.com/eclipse/smarthome.git
 
-3. Building with Maven
-======================
+3\. Building with Maven
+=======================
 
 To build Eclipse SmartHome from the sources, Maven takes care of everything:
-- set MAVEN_OPTS to "-Xms512m -Xmx1024m -XX:PermSize=256m -XX:MaxPermSize=512m"
+- set MAVEN_OPTS to "-Xms512m -Xmx1024m"
 - change into the smarthome directory ("cd smarthome“)
 - run "mvn clean install" to compile and package all sources
 
-The build result will be available in the folder 
-smarthome/distribution/target. Both the repository as well as
-the designer zips are placed in there.
+If there are tests that are failing occasionally on your local build, 
+run `mvn -DskipTests=true clean install` instead to skip them.
 
-4. Starting the designer
-========================
+The p2 repository that contains all bundles as a build result will be available in the folder 
+`products/org.eclipse.smarthome.repo/target`.
 
-- unzip the file eclipsesmarthome-incubation-0.x.0-designer-<platform>.zip to a local folder
-- run the executable „Eclipse-SmartHome-Designer[.exe]"
+# How to contribute
+
+If you want to become a contributor to the project, please read about [contributing](https://www.eclipse.org/smarthome/documentation/community/contributing.html) and check our [guidelines](https://www.eclipse.org/smarthome/documentation/development/guidelines.html) first. If you can't wait to get your hands dirty have a look at the open issues where we [need your help](https://github.com/eclipse/smarthome/issues?q=is%3Aissue+is%3Aopen+label%3A%22help+wanted%22) or one of the [open bugs](https://github.com/eclipse/smarthome/issues?q=is%3Aissue+is%3Aopen+label%3Abug).
+
